ADSM/static/css/adsm.css
/* ... */
.layout-panel .fragment input.textinput,
.layout-panel .fragment input.textInput
.layout-panel .fragment select,
.layout-panel select.productiontypelist {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
    max-width: 500px;
}
#left-panel {
    width:calc(16.667vw + 25px);
    padding-right: 25px;
}
#left-panel .fragment h1:first-of-type,
section#left-panel h1:first-of-type,
#main-panel h1:first-of-type {
    margin-top: 2px;
}
#center-panel input,
#center-panel select {
    background-position: calc(100% - 5px);
    width: 100%;
}
#center-panel input[type="checkbox"]{
    width: 15px;
}
#center-panel .glyphicon-pencil {
    display: none;
}
#center-panel .fragment {
    padding: 0 45px 10px 20px;
}
#center-panel .fragment form {
    margin-top: 10px;
}
#center-panel textarea {
    width: 100%;
}
ul {
    padding-left: 5px; /*prevent style inheritance from above*/
    list-style: none;
}
/*-------------------------------------------------------------*/
/*-----center block-----*/
/*-------------------------------------------------------------*/
.center-block { 
    width: calc(100vw - 60px);
    padding-left: 200px;
    margin-right:0;
    margin-left: 0;
    z-index: 0;
}
@media screen and (max-width: 1200px) {
    .center-block {
        padding-left: 160px;
    }
}

/*---- 2nd-to-3rd-column linking ----*/

#center-panel .control-group {
    position:relative;
}
#center-panel .active {
    border: 2px solid #cec7c0;
}
#center-panel .active_linking:after { /*--- right-linking line inside container --*/
    content:"";
    position: absolute;
    right: -20px;
    top: 29px;
    display: block;
    width: 20px;
    height: 2px;
    background-color: #cec7c0;
}
#center-panel .active_linking:before { /*-- link graphic between center and right columns --*/
    content:"";
    position: absolute;
    right: -45px;
    top: 20px;
    display: block;
    width: 25px;
    height: 20px;
    background-color: rgba(206, 199, 192, .5);
    border-top: 1px solid #cec7c0;
    border-bottom: 1px solid #cec7c0;
    background-image: url('../icons/link_icon.png');
    background-repeat: no-repeat;
    background-position: 3px 5px;
    
}
.reveal:after {
    content: "";
    position:absolute;
    top: 0;
    left: 0;
    width: calc(100% - 0px);
    height: 100%;
    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .2);
    border: 1px solid #cec7c0;
    pointer-events: none;
}

.reveal.layout-panel:after {
    width: calc(100% - 25px);
}

/*-------------------------------------------------------------*/
/*-----TOOLBAR-----*/
/*-------------------------------------------------------------*/
#toolbar {
    position: fixed;
    top: 75px;
    right: 0px;
    height: 100%;
    background-color: white;
}
.TB_btn {
    width: 50px;
    height: 50px;
    display: block;
    opacity: .5;
    background-repeat: no-repeat;
    transition: opacity .2s ease;
    position: relative;
}
.TB_btn:hover {
    opacity: 1;
}
.TB_btn.active {
    background-color: transparent;
    box-sizing: border-box;
    outline: 0;
    opacity: 1;
    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .2);
    border-bottom: 1px solid #cec7c0;
    border-top: 1px solid #cec7c0;
    transition: background-position-x .05s ease;
}
.TB_btn.active:before {
    content: "";
    width: 20px;
    height: 48px;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(10%,rgba(255,255,255,1)), color-stop(90%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0.2)));
    position: absolute;
    top: 0;
    left: -10px;
}
.TB_btn.active:after {
    content: "";
    position: absolute;
    display: block;
    top: 8px;
    height: 34px;
    width: 50px;
    border-left: 1px solid #cdc7c0;
    border-top: 17px solid rgba(0, 0, 0, 0);
    border-bottom: 17px solid rgba(0, 0, 0, 0);
    opacity: .5;
}
.TB_btn.active:hover {
    background-position-x: 5px;
}

.TB_btn.active:hover::after {
    border-left: 10px solid #cdc7c0;
    border-top: 17px solid transparent;
    border-bottom: 17px solid transparent;
    opacity: 1;
}
.TB_btn.disabled {
    opacity: .25;
    cursor: default;
}
.TB_btn.disabled:hover {
    cursor: default;
    opacity: 0.25;
}
#TB_file {
    background-image: url("../icons/TB_file_btn.png");
}
#TB_settings {
    background-image: url("../icons/TB_settings_btn.png");
}
#TB_population {
    background-image: url("../icons/TB_population_btn.png");
}
#TB_functions {
    background-image: url("../icons/TB_function_btn.png");
}
#tb_mask {
    position: absolute;
    top: 0px;
    width: 100%;
    height: 100%;
    display: block;
    background-color: rgba(0, 0, 0, .7);
    visibility: hidden;

}
/*-------------------------------------------------------------*/
/*-----TOOLBAR panels-----*/
/*-------------------------------------------------------------*/
.layout-panel.TB_panel { /*needs to be more specific than the .layout-panel rule */
    position: fixed;
    right: 0;
    top: 0;
    margin-right: 50px;
    width: calc(33.333vw - 75px);
    /* max-width: 460px; */
    overflow-y: auto;
    -webkit-box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .2);
    border: 1px solid #cec7c0;
    padding: 0 15px 0px 15px; 
    background-color: white;
    transition: margin-right .2s ease;
    overflow: auto;
    z-index: 15;
}
.TB_panel.TB_panel_closed {
    margin-right: -33.3333vw;
}
#main-panel ~ .TB_panel,
#population_main_panel ~ .TB_panel { /*--floats panel over content for static page layouts--*/
    -webkit-box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .2), -5px 0px 3px -1px rgba(0, 0, 0, .15) !important;
}
/*-------------------------------------------------------------*/
/*-----file panel-----*/
/*-------------------------------------------------------------*/
#file_panel, #file_panel #file_list a{
    background-color: #606060;
    color: rgb(236, 236, 236);
    padding: 1px;
}
/* ... */

